# TRAX-Transport-Lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  trax-dag-genesis-validation-output.txt  trax-tcp-lab-key.pem
cloud/aws/cloudformation/: README.md  trax-tcp-lab-ec2.yaml
cloud/aws/cloudformation/scripts/: bootstrap-trax-tcp-lab.sh  (+1 more)
docs/results/: 100k-udp-dag-genesis-scale.txt
scripts/: bootstrap_trax.py  compare_modes.py  compare_transports.py  run_all.py  scale_messages.py
src/trax_transport_lab/: __init__.py  dag_model.py  framing.py  logging_utils.py  messages.py  metrics.py  scaled.py  tcp_demo.py  tcp_peer.py  transport_common.py  trax_adapter.py  udp_demo.py
tests/: test_agent_key_rotation_cadence.py  test_cli_dag_genesis.py  test_cli_json.py  test_cli_modes.py  test_cloud_iac.py  test_compare_modes.py  test_compare_modes_dag_genesis.py  test_compare_transports.py  test_dag_genesis_functionality_exists.py  test_dag_genesis_mode.py  test_dag_key_rotation_cadence.py  test_dag_model.py  test_dag_signing_cadence.py  test_framing.py  test_import_trax.py  test_key_mode.py  test_max_dag_nodes.py  test_metrics.py  test_metrics_compact_output.py  test_metrics_signing_counts.py  test_mode_interpretation_output.py  test_modes.py  test_no_hot_path_packet_signing.py  test_repeated_runs.py  test_run_all_includes_dag_genesis.py  test_scale_messages_script.py  test_scaled_messages.py  test_slowest_events.py  test_tcp_adverse_cases.py  test_tcp_peer.py  test_tcp_sequence.py  test_transport_metrics.py  test_udp_adverse_cases.py  test_udp_sequence.py
